[package]
name = "clipper"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[[bin]]
name = "server"
path = "src/server/server.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
bincode = "1.3.3"
lazy_static = "1.5.0"
clap = { version = "4.5.26", features = ["derive"] }
serde-encrypt-core = "0.7.0"
orion = "0.17.7"
x25519-dalek = "2.0.1"
rand_core = "0.6.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2.2", features = [
    "NSPasteboard",
    "NSPasteboardItem",
] }
objc2 = { version = "0.5.2" }
objc2-foundation = { version = "0.2.2", features = [
    "NSData",
    "NSString",
    "NSArray",
    "NSEnumerator",
    "block2",
] }

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4.0"
arboard = "3.4.1"
